feat: add realtime conversion

--- a/Numeros Romanos/index.html
+++ b/Numeros Romanos/index.html
@@ -19,12 +19,12 @@
     <section class="input-section">
       <div class="input-section-line">
         <span>Decimal: </span>
-        <input type="text" id="inputDecimal" onchange="handleDecimalConversion(event)">
+        <input type="text" id="inputDecimal" onkeyup="handleDecimalConversion(event)">
       </div>
 
       <div class="input-section-line">
         <span>Romano: </span>
-        <input type="text" id="inputRomano" onchange="handleRomanConversion(event)">
+        <input type="text" id="inputRomano" onkeyup="handleRomanConversion(event)">
       </div>
     </section>
   </main>
