feat:add emojis to password generator

--- a/Gerador de Senhas/index.html
+++ b/Gerador de Senhas/index.html
@@ -39,6 +39,10 @@
             <input type="checkbox" id="symbols" name="options">
             <label for="symbols">Incluir Caracteres Especiais</label>
           </div>
+          <div class="checkbox-item">
+            <input type="checkbox" id="emojis" name="options">
+            <label for="symbols">Incluir um Emoji</label>
+          </div>
         </div>
 
       </fieldset>
