--- a/Numeros Romanos/index.html
+++ b/Numeros Romanos/index.html
@@ -20,11 +20,13 @@
       <div class="input-section-line">
         <span>Decimal: </span>
         <input type="text" id="inputDecimal" onkeyup="handleDecimalConversion(event)">
+        <button>Converter para Romano</button>
       </div>
 
       <div class="input-section-line">
         <span>Romano: </span>
         <input type="text" id="inputRomano" onkeyup="handleRomanConversion(event)">
+        <button>Converter para Decimal</button>
       </div>
     </section>
   </main>
